--- a/package.json
+++ b/package.json
@@ -24,28 +24,30 @@
     "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.5.2",
     "gulp-connect-php": "0.0.7",
+    "gulp-data": "^1.2.1",
     "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-newer": "^1.3.0",
-    "nunjucks": "^3.0.0",
-    "gulp-nunjucks-render": "^2.2.1",
     "gulp-notify": "^2.2.0",
+    "gulp-nunjucks-render": "^2.2.1",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^7.1.2",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-swig": "^0.8.0",
     "gulp-sym": "^0.0.14",
     "gulp-uglify": "^1.5.3",
     "gulp-uglifycss": "^1.0.6",
-    "gulp-wp-pot": "^1.2.2",
     "gulp-useref": "^3.1.0",
+    "gulp-wp-pot": "^1.2.2",
+    "mini.css": "^2.3.2",
+    "nunjucks": "^3.0.0",
     "path": "^0.12.7",
     "run-sequence": "^1.2.1",
-    "support-for": "^1.0.7",
-    "mini.css": "^2.3.2"
+    "support-for": "^1.0.7"
   }
 }
