--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "path": "^0.12.7",
     "run-sequence": "^1.2.1",
     "support-for": "^1.0.7"
+  },
+  "dependencies": {
+    "node-sass": "^4.9.0"
   }
 }
