--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/jeffreyscottfrench/jumpstart#readme",
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "gulp-autoprefixer": "^5.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.24.4",
@@ -50,6 +50,7 @@
     "gulp-useref": "^3.1.5",
     "gulp-wp-pot": "^2.3.1",
     "lazypipe": "^1.0.1",
+    "mini.css": "^2.3.7",
     "nunjucks": "^3.1.2",
     "path": "^0.12.7",
     "postcss-load-config": "^1.2.0",
