--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "homepage": "https://github.com/jeffreyscottfrench/jumpstart#readme",
   "devDependencies": {
-    "gulp-autoprefixer": "^5.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.24.4",
@@ -23,12 +22,16 @@
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
     "gulp": "3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-cache": "^1.0.2",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-connect-php": "1.0.3",
     "gulp-data": "^1.3.1",
+    "gulp-exif-js": "^1.0.0",
+    "gulp-filelist": "^1.0.0",
+    "gulp-filenames": "^4.0.1",
     "gulp-filter": "^5.1.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
