Resize & optimize img files for responsive images. Generate a single html page for each image via njk.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.24.4",
+    "concurrent-transform": "^1.0.0",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
@@ -34,6 +35,7 @@
     "gulp-filenames": "^4.0.1",
     "gulp-filter": "^5.1.0",
     "gulp-if": "^2.0.2",
+    "gulp-image-resize": "^0.13.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-line-ending-corrector": "^1.0.2",
     "gulp-merge-media-queries": "^0.2.1",
@@ -52,9 +54,12 @@
     "gulp-uglifycss": "^1.0.9",
     "gulp-useref": "^3.1.5",
     "gulp-wp-pot": "^2.3.1",
+    "imagemin-jpegoptim": "^5.2.0",
+    "imagemin-mozjpeg": "^7.0.0",
     "lazypipe": "^1.0.1",
     "mini.css": "^2.3.7",
     "nunjucks": "^3.1.2",
+    "os": "^0.1.1",
     "path": "^0.12.7",
     "postcss-load-config": "^1.2.0",
     "run-sequence": "^2.2.1",
