--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
+    "exif-js": "^2.3.0",
+    "exifreader": "^2.4.2",
+    "exiftool": "0.0.3",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -56,6 +59,7 @@
     "gulp-wp-pot": "^2.3.1",
     "imagemin-jpegoptim": "^5.2.0",
     "imagemin-mozjpeg": "^7.0.0",
+    "jdataview": "^2.5.0",
     "lazypipe": "^1.0.1",
     "mini.css": "^2.3.7",
     "nunjucks": "^3.1.2",
@@ -76,5 +80,8 @@
         "colorMin": false
       }
     ]
+  },
+  "dependencies": {
+    "atob": "^2.1.1"
   }
 }
