--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 build/2018/images/*
 build/2018/assets/img/*
 
+build/2018/assets/css/*.css
 build/2018/assets/css/*.min.css
 build/2018/assets/css/*.css.map
 
